# ImageEditor

./: CMakeLists.txt  ImageEditor.sln  README.md  croptool.h  edits.h  imagefile.cpp  imagefile.h  inputdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pixel.cpp  pixel.h  tests.cpp  utilities.h
ImageEditor/: ImageEditor.cpp  ImageEditor.vcxproj  ImageEditor.vcxproj.filters
ProjectImageEdit/: CMakeLists.txt  desktop.ini
ProjectImageEdit/backend/: main.cpp
ProjectImageEdit/backend/editingTools/: convolutionfilter.cpp  convolutionfilter.h  croptool.cpp  croptool.h
ProjectImageEdit/gui/: inputdialog.cpp  inputdialog.h  mainwindow.cpp
backend/: grayscaletool.cpp  grayscaletool.h  imagefile.cpp  imagefile.h  main.cpp  utilities.cpp  utilities.h
backend/editingTools/: addtexttool.cpp  addtexttool.h  blurtool.cpp  blurtool.h  brightnesstool.cpp  brightnesstool.h  contrasttool.cpp  contrasttool.h  coolingtool.cpp  coolingtool.h  croptool.cpp  croptool.h  editingmanager.cpp  editingmanager.h  edits.h  grayscaletool.cpp  grayscaletool.h  imageedit.h  resizetool.cpp  resizetool.h  rotateanti.cpp  rotateanti.h  rotateclockwisetool.cpp  rotateclockwisetool.h  sharpentool.cpp  sharpentool.h  thresholdtool.cpp  thresholdtool.h  warmingtool.cpp  warmingtool.h
gui/: icons.qrc  inputdialog.cpp  inputstringdialog.cpp  inputstringdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stylingHao.qss
